<resources>
    <string name="app_name">RPG Life </string>
    <string name="nav_character">Character</string>
    <string name="nav_skills">Skills</string>
    <string name="nav_rewards_shop">Rewards</string>
    <string name="nav_quests">Quests</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_about_me">About me</string>
    <string name="nav_rewards_list">Progress</string>

    <string name="characteristic_name_input_hint">Name</string>
    <string name="delete_all">Delete all</string>
    <string name="add_quest_name_hint">Name</string>
    <string name="quest_difficulty">Difficulty: %1$s</string>

    <string name="add_edit_quest_difficulty_very_easy">Very easy (+%1$d xp)</string>
    <string name="add_edit_quest_difficulty_easy">Easy (+%1$d xp)</string>
    <string name="add_edit_quest_difficulty_normal">Normal (+%1$d xp)</string>
    <string name="add_edit_quest_difficulty_hard">Hard (+%1$d xp)</string>
    <string name="add_edit_quest_difficulty_very_hard">Very hard (+%1$d xp)</string>
    <string name="add_edit_quest_difficulty_impossible">Impossible (+%1$d xp)</string>

    <string name="quest_difficulty_very_easy">Very easy</string>
    <string name="quest_difficulty_easy">Easy</string>
    <string name="quest_difficulty_normal">Normal</string>
    <string name="quest_difficulty_hard">Hard</string>
    <string name="quest_difficulty_very_hard">Very hard</string>
    <string name="quest_difficulty_impossible">Impossible</string>
    <string name="quest_difficulty_not_set">Not set</string>
    <string name="quest_difficulty_error">Error: non-existent difficulty</string>

    <string name="delete">Delete</string>
    <string name="populate_with_samples">Populate with samples</string>
    <string name="quest_toolbar_menu_select_all_text">Select all</string>

    <string name="character_toolbar_menu_item_populate_with_samples">Populate with samples</string>
    <string name="quests_toolbar_menu_filter_title">Filter</string>
    <string name="quests_filtering_all">All</string>
    <string name="stopwatch_start">Start</string>
    <string name="stopwatch_pause">Pause</string>
    <string name="stopwatch_reset">Reset</string>
    <string name="quests_toolbar_menu_sort_by">Sort by</string>
    <string name="quests_toolbar_sort_by_name">Name</string>
    <string name="quests_toolbar_sort_by_date_added">Date added</string>
    <string name="quests_toolbar_sort_by_date_due">Date due</string>
    <string name="quests_filtering_important">Important</string>
    <string name="add_edit_quest_add_date_due">Add date due</string>
    <string name="add_edit_quest_repeat">Repeat</string>
    <string name="quest_recycler_date_due">Due: %1$s</string>
    <string name="quest_toolbar_sort_by_difficulty">Difficulty</string>
    <string name="quest_date_due_today">Today</string>
    <string name="quest_date_due_tomorrow">Tomorrow</string>
    <string name="quest_date_due_next_week">Next week</string>
    <string name="quest_date_due_pick_a_date">Pick a date</string>
    <string name="add_edit_quest_repeat_popup_daily">Daily</string>
    <string name="add_edit_quest_repeat_popup_weekdays">Weekdays</string>
    <string name="add_edit_quest_repeat_popup_weekends">Weekends</string>
    <string name="add_edit_quest_repeat_popup_weekly">Weekly</string>
    <string name="add_edit_quest_repeat_popup_monthly">Monthly</string>
    <string name="add_edit_quest_repeat_popup_yearly">Yearly</string>
    <string name="add_edit_quest_repeat_popup_custom">Custom</string>
    <string name="add_edit_quest_add_subquest">Add subquest</string>
    <string name="show_developers_options">Show developers options</string>
    <string name="show_completed">Show completed</string>
    <string name="hide_completed">Hide completed</string>
    <string name="skills_level">Level:</string>
    <string name="add_skill">Add skill</string>
    <string name="add_new_characteristic">Add new characteristic</string>
    <string name="timer_label">Timer</string>
    <string name="add_skill_label">Add skill</string>
    <string name="add_difficulty">Add difficulty</string>
    <string name="xp_left_to_next_level">%1$d / %2$d xp</string>

    <string name="skill_toolbar_menu_sort_by">Sort by</string>
    <string name="skills_toolbar_menu_sort_by_name">Name</string>
    <string name="skills_toolbar_menu_sort_by_level">Level</string>

    <string name="skills_sorted_by_name">Sorted by name</string>
    <string name="skills_sorted_by_level">Sorted by level</string>

    <string name="add_edit_challenge_total_days_count">Total days count:</string>
    <string name="add_skills_to_quest_xp_percent">%1$d %%</string>
    <string name="add_edit_challenge_fail_challenge">Fail challenge</string>
    <string name="add_edit_skill_add_category">Add category</string>
    <string name="add_category_to_skill_toolbar_menu_add_category">Add category</string>
    <string name="statistics_toolbar_menu_skills">Skills</string>
    <string name="statistics_toolbar_menu_skills_categories">Skills categories</string>
    <string name="add_edit_skill_delete">Delete</string>
    <string name="add_edit_skill_confirm_delete_title">Are you sure</string>
    <string name="add_edit_skill_confirm_delete_message">%1$s will be permanently deleted</string>
    <string name="add_edit_skill_confirm_positive_text">Delete</string>
    <string name="add_edit_skill_confirm_negative_text">Cancel</string>
    <string name="add_edit_challenge_fail_confirm_title">Are you sure</string>
    <string name="add_edit_challenge_fail_confirm_message">All related to this challenge skills will lose half of experience, earned for this challenge</string>
    <string name="add_edit_challenge_fail_confirm_positive">Fail</string>
    <string name="add_edit_challenge_fail_confirm_negative">Cancel</string>
    <string name="add_edit_quest_add_start_date">Add start date</string>
    <string name="add_edit_quest_add_start_time">Add start time</string>
    <string name="add_edit_quest_add_start_date_today_popup_title">Today</string>
    <string name="add_edit_quest_add_start_date_tomorrow_popup_title">Tomorrow</string>
    <string name="add_edit_quest_add_start_date_next_week_popup_title">Next week</string>
    <string name="add_edit_quest_add_start_date_pick_date_popup_title">Pick date</string>

    <string name="add_edit_quest_add_time_due">Add time due</string>
    <string name="add_edit_quest_add_to_google_calendar">Add to Google calendar</string>
    <string name="add_edit_quest_remind_me">Remind me</string>
    <string name="quests_challenge">Challenge</string>
    <string name="quests_quest">Quest</string>
    <string name="add_edit_quest_write_calendar_permission_denied">Can\'t add to Google calendar without permission</string>
    <string name="add_edit_quest_added_to_google_calendar">Added to Google calendar</string>

    <string name="profile_image_file_name">profile image</string>
    <string name="user_images_directory_name">user_images</string>
    <string name="add_edit_challenge_add_date_due">Add date due</string>
    <string name="add_edit_challenge_add_time_due">Add time due</string>

    <string name="character_coins">Coins: %1$s</string>
    <string name="character_level">Level %1$s</string>
    <string name="character_completed_quests">Completed quests: %1$s</string>
    <string name="character_earned_coins">Earned coins: %1$s</string>
    <string name="character_increase_coins_fab_content_description">Add one coin</string>
    <string name="character_decrease_coins_fab_content_description">Take one coin</string>
    <string name="countdown_timer_start_fab_content_description">Start countdown timer</string>
    <string name="countdown_timer_pause_fab_content_description">Pause countdown timer</string>
    <string name="countdown_timer_stop_fab_content_description">Stop countdown timer</string>
    <string name="quests_add_challenge_fab_content_description">Create new challenge</string>
    <string name="quests_add_quest_fab_content_description">Create new quest</string>
    <string name="quests_main_fab_content_description">Open adding quest or challenge buttons menu</string>
    <string name="skills_add_skill_fab_content_description">Create new skill</string>
    <string name="rewards_shop_toolbar_title">Rewards shop</string>
    <string name="character_rewards_shop">Rewards shop</string>
    <string name="character_complete_very_easy_task">Complete Very Easy task</string>
    <string name="character_complete_easy_task">Complete Easy task</string>
    <string name="character_complete_normal_task">Complete Normal task</string>
    <string name="character_complete_hard_task">Complete Hard task</string>
    <string name="character_complete_epic_task">Complete Epic task</string>
    <string name="character_complete_legendary_task">Complete Legendary task</string>
    <string name="character_multiplier_none">None</string>
    <string name="character_multiplier_x1_5">X1.5</string>
    <string name="character_multiplier_x2">X2</string>

    <string name="rewards_shop_buy_button_text">Buy</string>
    <string name="rewards_shop_cancel_button_text">Cancel</string>
    <string name="rewards_shop_not_enough_money">Not enough money</string>

    <string name="rewards_progress_list_date_range">%1$s - %2$s</string>
    <string name="rewards_progress_list_percent_progress">%1$d %%</string>
    <string name="rewards_progress_list_earned_reward">Уже получена</string>
    <plurals name="rewards_progress_list_days_left">
        <item quantity="zero">Less than a day is left</item>
        <item quantity="one">%1$s day left</item>
        <item quantity="other">%1$s days left</item>
    </plurals>
</resources>
