<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/quests_toolbar_menu_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/quests_toolbar_menu_filter_title"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/quests_toolbar_menu_filtering_all"
                android:title="@string/quests_filtering_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_filtering_active"
                android:title="@string/quests_filtering_active"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_filtering_completed"
                android:title="@string/quests_filtering_completed"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_filtering_important"
                android:title="@string/quests_filtering_important"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_filter_today"
                android:title="@string/quest_date_due_today"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_filter_tomorrow"
                android:title="@string/quest_date_due_tomorrow"
                app:showAsAction="never" />
        </menu>

    </item>

    <item
        android:id="@+id/quests_toolbar_menu_sort_by"
        android:title="@string/quests_toolbar_menu_sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/quests_toolbar_menu_sort_by_name"
                android:title="@string/quests_toolbar_sort_by_name"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_sort_by_date_added"
                android:title="@string/quests_toolbar_sort_by_date_added"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_sort_by_date_due"
                android:title="@string/quests_toolbar_sort_by_date_due"
                app:showAsAction="never" />
            <item
                android:id="@+id/quests_toolbar_menu_sort_by_difficulty"
                android:title="@string/quest_toolbar_sort_by_difficulty"
                app:showAsAction="never" />
        </menu>

    </item>

    <item
        android:id="@+id/quests_toolbar_menu_show_completed"
        android:title="@string/show_completed"
        app:showAsAction="never" />

    <!--Only for developer-->
    <item
        android:id="@+id/quests_toolbar_menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/quests_toolbar_menu_populate_with_samples"
        android:title="@string/populate_with_samples"
        app:showAsAction="never" />

</menu>