<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/character_screen"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_character" />
        <item
            android:id="@+id/skills_screen"
            android:icon="@drawable/ic_skills"
            android:title="@string/nav_skills" />
        <item
            android:id="@+id/quests_screen"
            android:icon="@drawable/ic_quests"
            android:title="@string/nav_quests" />
        <item
            android:id="@+id/achievements_screen"
            android:icon="@drawable/ic_achievements"
            android:title="@string/nav_achievements" />
    </group>


    <group
        android:id="@+id/nav_secondary_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings_screen"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/faq_screen"
            android:icon="@drawable/ic_faq"
            android:title="@string/nav_faq" />
        <item
            android:id="@+id/about_me_screen"
            android:icon="@drawable/ic_about_me"
            android:title="@string/nav_about_me" />
    </group>


</menu>