<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/character_screen"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_character" />
    <item
        android:id="@+id/skills_screen"
        android:icon="@drawable/ic_skills"
        android:title="@string/nav_skills" />
    <item
        android:id="@+id/quests_screen"
        android:icon="@drawable/ic_quests"
        android:title="@string/nav_quests" />
    <item
        android:id="@+id/achievements_screen"
        android:icon="@drawable/ic_achievements"
        android:title="@string/nav_achievements" />
    <item
        android:id="@+id/settings_screen"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>