<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Chronometer
        android:id="@+id/stopwatch_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopwatch_button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopwatch_button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_pause" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopwatch_button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_reset" />


</LinearLayout>