<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/quests_screen">

    <fragment
        android:id="@+id/character_screen"
        android:name="com.elli0tt.rpg_life.presentation.character.CharacterFragment"
        android:label="@string/nav_character"
        tools:layout="@layout/fragment_character">
        <action
            android:id="@+id/action_character_screen_to_add_characteristic_fragment"
            app:destination="@id/new_characteristic_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/skills_screen"
        android:name="com.elli0tt.rpg_life.presentation.skills.SkillsFragment"
        android:label="@string/nav_skills"
        tools:layout="@layout/fragment_skills">
        <action
            android:id="@+id/action_skills_screen_to_countdown_timer_screen"
            app:destination="@id/countdown_timer_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_skills_screen_to_add_skill_screen"
            app:destination="@id/add_edit_skill_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/quests_screen"
        android:name="com.elli0tt.rpg_life.presentation.quests.QuestsFragment"
        android:label="@string/nav_quests"
        tools:layout="@layout/fragment_quests">
        <!--<action-->
        <!--android:id="@+id/action_to_add_quest_screen"-->
        <!--app:destination="@id/add_quest_screen"-->
        <!--app:enterAnim="@anim/nav_default_enter_anim"-->
        <!--app:exitAnim="@anim/nav_default_exit_anim"-->
        <!--app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
        <!--app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->

        <!--<action-->
        <!--android:id="@+id/action_to_edit_quest_screen"-->
        <!--app:destination="@id/edit_quest_screen"-->
        <!--app:enterAnim="@anim/nav_default_enter_anim"-->
        <!--app:exitAnim="@anim/nav_default_exit_anim"-->
        <!--app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
        <!--app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->
        <action
            android:id="@+id/action_quests_screen_to_add_quest_screen"
            app:destination="@id/add_edit_quest_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_quests_screen_to_edit_quest_screen"
            app:destination="@id/add_edit_quest_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_quests_screen_to_add_edit_challenge_screen"
            app:destination="@id/add_edit_challenge_screen" />
    </fragment>

    <fragment
        android:id="@+id/statistics_screen"
        android:name="com.elli0tt.rpg_life.presentation.statistics.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/settings_screen"
        android:name="com.elli0tt.rpg_life.presentation.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/faq_screen"
        android:name="com.elli0tt.rpg_life.presentation.faq.FAQFragment"
        android:label="@string/nav_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/about_me_screen"
        android:name="com.elli0tt.rpg_life.presentation.about_me.AboutMeFragment"
        android:label="@string/nav_about_me"
        tools:layout="@layout/fragment_about_me" />
    <fragment
        android:id="@+id/new_characteristic_screen"
        android:name="com.elli0tt.rpg_life.presentation.add_edit_characteristic.AddEditCharacteristicFragment"
        android:label="@string/add_new_characterstic"
        tools:layout="@layout/fragment_add_edit_characteristic" />

    <fragment
        android:id="@+id/add_edit_quest_screen"
        android:name="com.elli0tt.rpg_life.presentation.add_edit_quest.AddEditQuestFragment"
        android:label=""
        tools:layout="@layout/fragment_add_edit_quest">
        <argument
            android:name="questId"
            android:defaultValue="@null"
            app:argType="java.lang.Integer"
            app:nullable="true" />
        <action
            android:id="@+id/action_add_edit_quest_screen_self"
            app:destination="@id/add_edit_quest_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/add_edit_quest_screen" />
        <argument
            android:name="isSubQuest"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="parentQuestId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_add_edit_quest_screen_to_addSkillsToQuestFragment"
            app:destination="@id/add_skills_to_quest_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/stopwatch_screen"
        android:name="com.elli0tt.rpg_life.presentation.stopwatch.StopwatchFragment"
        android:label="Stopwatch"
        tools:layout="@layout/fragment_stopwatch" />

    <fragment
        android:id="@+id/countdown_timer_screen"
        android:name="com.elli0tt.rpg_life.presentation.countdown_timer.CountDownFragment"
        android:label="@string/timer_label"
        tools:layout="@layout/fragment_countdown_timer" />

    <fragment
        android:id="@+id/add_edit_skill_screen"
        android:name="com.elli0tt.rpg_life.presentation.add_edit_skill.AddEditSkillFragment"
        android:label="@string/add_skill_label"
        tools:layout="@layout/fragment_add_edit_skill" />

    <fragment
        android:id="@+id/add_skills_to_quest_screen"
        android:name="com.elli0tt.rpg_life.presentation.add_skills_to_quest.AddSkillsToQuestFragment"
        tools:layout="@layout/fragment_add_skills_to_quest">
        <argument
            android:name="questId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/add_edit_challenge_screen"
        android:name="com.elli0tt.rpg_life.presentation.add_edit_challenge.AddEditChallengeFragment"
        android:label="AddEditChallengeFragment"
        tools:layout="@layout/fragment_add_edit_challenge">
        <argument
            android:name="challengeId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_add_edit_challenge_screen_to_add_skills_to_quest_screen"
            app:destination="@id/add_skills_to_quest_screen" />
    </fragment>


</navigation>